# Chat_Bot

./: .env  .env.example.spikingbrain  .gitignore  DEVELOPMENT_STATUS.md  OLLAMA_INTEGRATION.md  PROJECT_OVERVIEW.md  README.md  RUN_INSTRUCTIONS.md  START_BACKEND.bat  START_FRONTEND.bat  check_encoding.py  check_packages.py  clean_cache.py  eidetic_rag_progressive_build_plan_markdown.md  memory.db  pyproject.toml  requirements.txt  test_export.json  test_memory.db  test_memory_recall.db  test_privacy.db  test_promotion.db
data/sample_documents/: sample1.txt  sample2.txt
data/test_dataset/: ground_truth.json
database/: connection.py  migrate.py
database/schema/: 001_initial_schema.sql
docs/: index.html  script.js  styles.css
eidetic_rag/: __init__.py
eidetic_rag/backend/: __init__.py
index/: chroma.sqlite3
index/embeddings_cache/: all-MiniLM-L6-v2_cache.pkl
scripts/: endpoint_checks.py
src/api/: main.py
src/core/: chunker.py  cli.py  embeddings.py  ingestor.py  vector_index.py
src/frontend/: package-lock.json  package.json  tsconfig.json
src/generation/: __init__.py  generator.py  rag_pipeline.py  spiking_brain_generator.py
src/memory/: memory_manager.py  models.py
src/orchestration/: __init__.py  cache_manager.py  logger.py  orchestrator.py
src/reflection/: reflection_agent.py  verification_engine.py
src/retrieval/: intent_classifier.py  retrieval_controller.py
src/ui/: streamlit_app.py
test_concurrent_cache/queries/: cache.db
test_concurrent_index/: chroma.sqlite3
test_concurrent_logs/: structured_2025-10-24.json
test_controller_index/: chroma.sqlite3
test_index/: chroma.sqlite3
test_index/embeddings_cache/: all-MiniLM-L6-v2_cache.pkl
test_index_persist/: chroma.sqlite3
test_logs/: structured_2025-10-15.json  structured_2025-10-24.json
test_orch_cache/retrieval/: cache.db
test_orch_index/: chroma.sqlite3
test_orch_logs/: structured_2025-10-15.json
test_perf_cache/queries/: cache.db
test_perf_index/: chroma.sqlite3
test_perf_logs/: structured_2025-10-24.json
test_rag_index/: chroma.sqlite3
test_rag_index/cache/: all-MiniLM-L6-v2_cache.pkl
tests/: test_stage0.py  test_stage1.py  test_stage2.py  test_stage3.py  test_stage4.py  test_stage5.py  test_stage6.py  test_stage7.py
tests/general/: test_api_integration.py  test_backend_query.py  test_backend_quick.py  test_e2e.py  test_final_integration.py  test_imports.py  test_integration_offline.py  (+9 more)
(+28 files in other folders)
