[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "eidetic-rag"
version = "0.1.0"
description = "Advanced Retrieval-Augmented Generation system with persistent memory and reflection capabilities"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "eidetic_rag"}]

[tool.poetry.dependencies]
python = "^3.9"
# Core FastAPI
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"

# Document processing
PyPDF2 = "^3.0.1"
python-docx = "^1.1.0"
beautifulsoup4 = "^4.12.2"
chardet = "^5.2.0"

# ML & Embeddings
transformers = "^4.35.2"
sentence-transformers = "^2.2.2"
torch = "^2.1.1"
numpy = "^1.24.3"

# Vector stores
chromadb = "^0.4.18"
faiss-cpu = "^1.7.4"

# LLM Integration
openai = "^1.3.5"
langchain = "^0.1.0"
langchain-community = "^0.0.10"

# Database
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"

# Caching
redis = "^5.0.1"
diskcache = "^5.6.3"

# Monitoring & Logging
loguru = "^0.7.2"
prometheus-client = "^0.19.0"

# Utils
python-dotenv = "^1.0.0"
click = "^8.1.7"
tqdm = "^4.66.1"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.0"
pre-commit = "^3.5.0"

[tool.poetry.group.test.dependencies]
httpx = "^0.25.0"
pytest-mock = "^3.12.0"

[tool.poetry.scripts]
eidetic-rag = "eidetic_rag.backend.app.main:main"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  migrations
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "chromadb.*",
    "faiss.*",
    "torch.*",
    "transformers.*",
    "sentence_transformers.*"
]
ignore_missing_imports = true
